--- a/myclouds-admin-web/src/main/resources/templates/fragments/header-banner.html
+++ b/myclouds-admin-web/src/main/resources/templates/fragments/header-banner.html
@@ -17,7 +17,7 @@
 <header class="navbar navbar-fixed-top" th:fragment="banner">
 	<div class="navbar-branding">
 		<a class="navbar-brand" href="/">
-			<span class="fs26"><strong>中 赢 卓 投</strong></span>
+			<span class="fs26"><strong>嘉 靖 银 行</strong></span>
 		</a>
 		<span id="toggle_sidemenu_l" class="ad ad-lines"></span>
 	</div>
